# OpenGL-Loader

./: .clang-format  CMakeLists.txt
cmake/: Findassimp.cmake
include/: CMakeLists.txt  Camera.hxx  Event.hxx  GLError.hxx  Keyboard.hxx  Mesh.cxx  Mesh.hxx  Mouse.hxx  Shader.hxx  Texture.hxx  UniformNames.hxx  Window.hxx
include/EventSystem/: Event.hxx  EventDispatcher.hxx  MoveEvents.hxx
include/ImGuiAbstraction/: ImGuiAbstraction.hxx
include/common/: Logging.cxx  Logging.hxx  Model.cxx  Model.hxx
include/property/: DirectionalLight.hxx  Light.hxx  Material.hxx  PointLight.hxx  SpotLight.hxx
res/: fragment.glsl  vertex.glsl
res/Models/: thorhammer.mtl
src/: CMakeLists.txt  Camera.cxx  Event.cxx  Keyboard.cxx  Mesh.cxx  Mouse.cxx  Shader.cxx  Texture.cxx  Window.cxx
src/EventSystem/: MoveEvents.cxx
src/application/: IApplication.hxx  OpenGLPBR.cxx  OpenGLPBR.hxx
src/entry/: CMakeLists.txt  main.cxx
src/property/: DirectionalLight.cxx  Light.cxx  Material.cxx  PointLight.cxx  SpotLight.cxx
